--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,10 @@ ext {
 dependencies {
     implementation 'com.vaadin:vaadin-spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+    implementation group: 'com.h2database', name: 'h2'
 
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.1'
 
